# plunger

./: .gitignore  AGENTS.md  LICENSE  Plunger-fixed.spec  Plunger.spec  README.md  README_EN.md  build.bat  build_singlefile.ps1  generate_icon.py  launch_gui.bat  launch_gui.vbs  plunger.py  plunger_shared.py  plunger_ui.py  pyproject.toml  restart_when_idle.ps1  run.py  run.pyw  test_active_recovery_hint.py  test_pending_tool_waits.py  test_plunger_ui.py  test_recovery.py  test_run.py  test_sse_writer.py  test_tool_wait_timeout_hint.py  test_watchdog.py
